--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,16 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 flask = "^2.0"
 numpy = "^1.21"
 tqdm = "^4.62"
+dash = "^2.16.1"
+joblib = "^1.3.2"
+pillow = "^10.2.0"
+scikit-learn = "^1.4.1"
+spacy = "^3.7.4"
+torch = "^2.2.1"
+torchvision = "^0.17.1"
+transformers = "^4.38.2"
+datasets = "^2.18.0"
